--- a/src/app/components/deck-builder/deck-builder.component.html
+++ b/src/app/components/deck-builder/deck-builder.component.html
@@ -1,4 +1,4 @@
-<div *ngFor = "let player of players">
+<!-- <div *ngFor = "let player of players">
 
     <div *ngFor = "let card of player.cards">
         {{card.text}}
@@ -6,4 +6,4 @@
 
 </div>
 
-<br>
+<br> -->
