--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,13 @@
-<p>
-  game works!
-</p>
+<div *ngFor = "let player of players">
+
+  <div *ngFor = "let card of player.cards">
+
+    <div>
+
+        {{card.text}}
+
+    </div>
+    
+  </div>
+
+</div>
